--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
     padding: 10px 40px;
     font-size: 18px;
     font-weight: 600;
-    background-color: #0358d8;
+    background-color: rgb(148, 35, 236);
     border: 0;
     border-radius: 30px;
     cursor: pointer;
@@ -38,12 +38,12 @@ h2.titulo {
 }
 
 h2.titulo span {
-    color: #0358d8;
+    color: rgb(148, 35, 236);
 }
 
 button:hover,
 form .btn-enviar input:hover {
-    box-shadow: 0px 0px 8px #0358d8;
+    box-shadow: 0px 0px 8px rgb(148, 35, 236);
     transform: scale(1.05);
 }
 
@@ -79,6 +79,10 @@ header nav.menu-desktop ul li {
     padding: 0 40px;
 }
 
+.logo img {
+    width: 50%;
+}
+
 /* ESTILO DO MENU MOBILE */
 
 .btn-abrir-menu{
@@ -86,7 +90,7 @@ header nav.menu-desktop ul li {
 }
 
 .btn-abrir-menu i{
-    color: #0358d8;
+    color: rgb(148, 35, 236);
     font-size: 40px;
 }
 
@@ -116,7 +120,7 @@ header nav.menu-desktop ul li {
 }
 
 .menu-mobile .btn-fechar i{
-    color: #0358d8;
+    color: rgb(148, 35, 236);
     font-size: 30px;
 }
 
@@ -133,7 +137,7 @@ header nav.menu-desktop ul li {
 }   
 
 .menu-mobile nav ul li a:hover{
-    background-color: #0358d8;
+    background-color: rgb(148, 35, 236);
     color: #000;
 }
 
@@ -166,7 +170,7 @@ section.topo-do-site .flex {
 }
 
 .topo-do-site .txt-topo-site h1 span {
-    color: #0358d8;
+    color: rgb(148, 35, 236);
 }
 
 .topo-do-site .txt-topo-site p {
@@ -214,13 +218,20 @@ section.especiliadades .flex {
 
 .especiliadades .especialidades-box i {
     font-size: 70px;
-    color: #0358d8;
+    color: rgb(148, 35, 236);
 }
 
 .especiliadades .especialidades-box h3 {
     font-size: 28px;
     margin: 15px 0;
 }
+
+
+
+
+
+
+
 
 /* ESTILO DO SOBRE */
 section.sobre {
@@ -243,7 +254,7 @@ section.sobre .flex {
 }
 
 .sobre .txt-sobre h2 span {
-    color: #0358d8;
+    color: rgb(148, 35, 236);
     display: block;
 }
 
@@ -257,12 +268,19 @@ section.sobre .flex {
     height: 60px;
     border-radius: 50%;
     border: none;
-    background-color: #0358d8;
+    background-color: rgb(148, 35, 236);
     font-size: 22px;
     cursor: pointer;
     margin: 0 5px;
     transition: .2s;
 }
+
+.img-sobre img{
+    width: 100%;
+}
+
+
+
 
 /* ESTILO DO PORTFÓLIO */
 section.portfolio {
@@ -351,7 +369,7 @@ form .btn-enviar {
 
 form .btn-enviar input {
     width: 120px;
-    background-color: #0358d8;
+    background-color: rgb(148, 35, 236);
     color: #000;
     font-weight: 700;
     cursor: pointer;
@@ -374,7 +392,7 @@ footer .line-footer {
 }
 
 .borda {
-    border-top: 2px solid #0358d8;
+    border-top: 2px solid rgb(148, 35, 236);
 }
 
 footer .line-footer p i {
@@ -384,6 +402,10 @@ footer .line-footer p i {
 
 footer .line-footer p a {
     color: #fff;
+}
+
+.logo-footer img{
+    width: 50%;
 }
 
 @media screen and (max-width: 1020px) {
@@ -447,7 +469,7 @@ footer .line-footer p a {
     }
 
     .img-sobre img{
-        width: 100%;
+        width: 20%;
     }
 
     /* PORTFÓLIO */
